[package]
name = "rollbar-jvm"
version = "0.1.1"
authors = ["Andrew Weiss <wvvwwvw@gmail.com>"]
build = "build.rs"
edition = "2018"

[dependencies]
log = "0.4"
rollbar-rust = { path = "../core" }

[dependencies.error-chain]
version = "0.12.0"
default-features = false

[build-dependencies]
bindgen = "0.43.0"
