[package]
name = "pyagent"
version = "0.1.1"
authors = ["Andrew Weiss <wvvwwvw@gmail.com>"]
edition = "2021"

[dependencies]
clap = "2"
error-chain = "0.12.0"
log = "0.4"
rust-ini = "0.13"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
simple_logger = "1.0.1"
toml = "0.4"

rollbar-rust = { path = "../core" }
