[package]
name = "rollbar-node"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rollbar-rust = { path = "../core" }
neon = { version = "0.10", default-features = false, features = ["napi-6"] }
neon-serde2 = { version = "0.8.0" }
serde_json = "1.0.79"
