[package]
name = "rollbar-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rollbar-rust = { path = "../core" }
serde_json = "1.0.79"
wasm-bindgen = { version = "0.2.80", features = ["serde-serialize"] }
